form lable updated for contact form.  Col-sm-3 added on control-labels to fix problem with form tables collapsing to the right.

--- a/css/main3.css
+++ b/css/main3.css
@@ -490,10 +490,7 @@ form {
     color:#BAE0BA;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 1em;
-}
-
-#contact .control-label{
-  font-variant: small-caps;
+    font-variant: small-caps;
 }
 
 #contact fieldset{
